# enchilada

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
db/: 0001_initial.sql  CMakeLists.txt
src/app/: CMakeLists.txt  FilterProxyModel.cpp  FilterProxyModel.h  TextureItemModel.cpp  TextureItemModel.h  WadImageProvider.cpp  WadImageProvider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/wad/: CMakeLists.txt  palette.h  wad.h
ui/: App.qml  CMakeLists.txt  FilterForm.ui.qml  qtquickcontrols2.conf  texture_anim.frag  texture_sky.frag  texture_water.frag
